# tailor-resume

./: .env.example  .gitignore  README.md  cosmas_emerah_resume.md  fake_resume.md  pyproject.toml  railway.json  tutorial.md
knowledge/: user_preference.txt
src/resume_tailor/: crew.py  main.py
src/resume_tailor/config/: agents.yaml  tasks.yaml
src/resume_tailor/tools/: resume_tools.py
