[project]
name = "resume_tailor"
version = "0.1.0"
description = "AI-powered resume tailoring tool"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "langchain_community>=0.0.29",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
resume_tailor = "resume_tailor.main:run"
run_crew = "resume_tailor.main:run"
train = "resume_tailor.main:train"
replay = "resume_tailor.main:replay"
test = "resume_tailor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.urls]
Homepage = "https://github.com/cosmasemerah/resume-tailor"
Repository = "https://github.com/cosmasemerah/resume-tailor.git"
